  ***************************
  * v2.1.2
  ***************************

    * Bugfix CORE-2173
        Server crashes after abnormal disconnect with open ExecuteStatement
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-2171
        Column MON$CALLER_ID of table MON$CALL_STACK reports invalid IDs
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-2157
        fbclient does not have the libpthread dependency
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-2151
        Temporary directory path with spaces in the middle is wrongly truncated
        from the rightmost space
      Contributor(s):
        Vlad Horsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-2137
        Database restore may crash the server when DummyPacketInterval is set
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-2118
        UPDATE OR INSERT with subquery used in the MATCHING part doesn't insert record
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-2117
        Incorrect ROW_COUNT value with indexed retrieval and subquery
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-2108
        Error "get_free_slot() failed" reported
      Contributor(s):
        Vlad Horsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-2098
        View over global temporary table
      Contributor(s):
        Vlad Horsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-2093
        Superserver startup fails on Solaris 64-bit
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-2087
        RemoteBindAddress = hostname instead of IP address is silently ignored
        and server binds to all interfaces (nothing in either firebird.log or syslog)
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>
